--- a/resources/config.properties
+++ b/resources/config.properties
@@ -1,5 +1,6 @@
+isClient=true
 reqparentClass=com.umf.frame.data.RequestData
 resparentClass=com.umf.frame.data.ResponseData
 package=com.umf.busi.data
-inputFIle=E:\\temp\\test.xlsx
-outPath=E:\\temp
+inputFIle=E\:\\temp\\test.xlsx
+outPath=E\:\\temp
