--- a/resources/config.properties
+++ b/resources/config.properties
@@ -1,6 +1,8 @@
-isClient=true
+isClient=false
 reqparentClass=com.umf.frame.data.RequestData
 resparentClass=com.umf.frame.data.ResponseData
-package=com.umf.busi.data
+model.package=com.umf.busi.data
+controller.package=com.umf.busi.controller
+controller.parent.class=com.umf.busi.controller.BaseController
 inputFIle=E\:\\temp\\test.xlsx
 outPath=E\:\\temp
